# Gjallarhorn

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
deploy/observability/: README.md  docker-compose.yml  run-indexer.Dockerfile
deploy/observability/grafana/dashboards/: kvasir-analysis.json  lidskjalv-sonar.json  pipeline-overview.json  run-detail.json
deploy/observability/grafana/provisioning/datasources/: datasources.yml
deploy/observability/vector/: vector.yaml
examples/observability/: .env.example  README.md  docker-compose.yml
examples/observability/grafana/dashboards/: logs-drilldown.json
examples/observability/grafana/provisioning/dashboards/: dashboards.yml
examples/observability/loki/: config.yml
src/gjallarhorn/: __init__.py  cli.py  contracts.py  indexer.py  models.py  state.py  utils.py
tests/: test_indexer.py
