[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gjallarhorn"
version = "0.1.0"
description = "Observability indexer and Grafana/Loki deployment bundle for the pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.15"
license = { text = "MIT" }
authors = [
  { name = "Seidr Edu" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "psycopg[binary]>=3.2,<3.3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.19.1",
  "ruff>=0.15.5",
]

[project.scripts]
gjallarhorn = "gjallarhorn.cli:run_cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
files = ["src/gjallarhorn"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
no_implicit_optional = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
